production/infraestructure/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:495624154773:certificate/5ff9b3cd-4473-4781-a268-f8da8f886145
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: nsse-ingress-prod
    alb.ingress.kubernetes.io/scheme: internal
    external-dns.alpha.kubernetes.io/hostname: backend.s2sinovatec.com
    alb.ingress.kubernetes.io/security-groups: nsse-production-alb-security-group, nsse-production-worker-security-group
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /healthchecks
        pathType: Prefix
        backend:
          service:
            name: nsse-health-checker-prod
            port:
              number: 4443
      - path: /identity
        pathType: Prefix
        backend:
          service:
            name: nsse-identity-server-prod
            port:
              number: 4443
      - path: /invoice
        pathType: Prefix
        backend:
          service:
            name: nsse-invoice-generator-prod
            port:
              number: 4443
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: nsse-main-prod
            port:
              number: 4443
      - path: /notificator
        pathType: Prefix
        backend:
          service:
            name: nsse-notificator-prod
            port:
              number: 4443
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: nsse-order-prod
            port:
              number: 4443
